# sondera

./: .gitignore  .readthedocs.yaml  HISTORY.md  LICENSE  README.md  mkdocs.yml  requirements_tests.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: run_flake8_pytest.yml
docs/: api.md  conf.py  examples.rst  index.md  index.rst
docs/source/: modules.rst  sondera.clients.rst  sondera.clients.sgu.rst  sondera.clients.smhi.rst  sondera.rst
docs_mkdocs/: api.md  requirements.txt
examples/: example_smhi_hydroobs.py  example_smhi_metobs.py
sondera/: __init__.py  datatypes.py  exceptions.py  geo_utils.py
sondera/clients/: parameters.py  sgugroundwater.py  smhihydroobs.py  smhimetobs.py
sondera/clients/sgu/: __init__.py  groundwater.py  sgugroundwater.py
sondera/clients/smhi/: __init__.py  hydroobs.py  metobs.py  smhistrang.py
src/sondera/: __init__.py  datatypes.py  exceptions.py  geo_utils.py
src/sondera/clients/: parameters.py
src/sondera/clients/sgu/: __init__.py  groundwater.py
src/sondera/clients/smhi/: __init__.py  common.py  hydroobs.py  metobs.py  radar.py  smhistrang.py
tests/: __init__.py  test_sgugroundwater.py  test_smhihydroobs.py  test_smhimetobs.py  test_smhistrang.py  test_sondera.py
