[metadata]
name = sondera
version = 0.0.1
description = Python client for accessing Swedish open data and observations related to hydrology
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/rhkarls/sondera
project_urls =
    Bug Tracker = https://github.com/rhkarls/sondera/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = sondera
zip_safe = False
install_requires =
    numpy
	pandas
	geopandas
	requests
    tqdm

[options.extras_require]
test =
    pytest

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:sondera/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
[tool:pytest]

